--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,5 @@
 {% extends "template.html" %}
-{% block navigate %}
-{% endblock %}
+
 {% block content %}
-	<h1>Web Orders</h1>
+	<h1>Strona Glowna</h1>
 {% endblock %}
