--- a/home/templates/template.html
+++ b/home/templates/template.html
@@ -6,17 +6,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Web Orders</title>
+    <title>Pemes Apps</title>
     {% load staticfiles %}
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'navigation/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="{% static 'navigation/css/starter-template.css' %}" rel="stylesheet">
+    <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
+    <link href="{% static 'css/my.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
   </head>
-
   <body>
-
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="/">Pemes Apps</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,22 +26,31 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/pricing">Wycena</a>
+            <a class="nav-link {{ pricing_active }}" href="/pricing">Wycena</a>
           </li>
         </ul>
       </div>
     </nav>
 
-    {% block navigate %}
-    {% endblock %}
-
-    <main role="main" class="container">
-      <div class="starter-template">
-      {% block content %}
-      {% endblock %}
+    <div class="container-fluid">
+      <div class="row">   
+        <nav class="navbar bg-light col-sm-3 col-md-2 d-block">
+          <ul class="navbar-nav nav-pills">
+          {% block navigation%}
+          {% endblock %}
+          </ul>
+        </nav>
+        <main role="main" class="col-sm-9 col-md-10">
+          {% block content %}
+          {% endblock %}
+        </main><!-- /.container -->
       </div>
-    </main><!-- /.container -->
-    
-    <script src="{% static 'navigation/js/bootstrap.min.js' %}"></script>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+      {% block js %}
+      {% endblock %}
   </body>
 </html>
