--- a/pricing/templates/pricing/index.html
+++ b/pricing/templates/pricing/index.html
@@ -1,18 +1,7 @@
-{% extends "template.html" %}
+﻿{% extends "template.html" %}
 
-{% block navigate %}
-    <div class="container-fluid">
-        <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Nowy produkt<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Otwórz produkt</a>
-            </li>
-          </ul>
-        </nav>
-    </div>
+{% block navigation %}
+{% include "pricing/navigation.html" %}
 {% endblock %}
 
 {% block content %}
