--- a/pricing/templates/pricing/navigation.html
+++ b/pricing/templates/pricing/navigation.html
@@ -3,11 +3,17 @@
           <a class="nav-link {{ new_product_active }} p-2" href="/pricing/new_product">Dodaj produkt</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ products_active }}  p-2" href="/pricing/product_list">Produkty</span></a>
+          <a class="nav-link {{ products_active }}  p-2" href="/pricing/product_list">Edytuj produkt</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ order_active }}  p-2" href="/pricing/new_order">Wycena</a>
+          <a class="nav-link {{ new_machine_active }}  p-2" href="/pricing/new_machine">Dodaj maszyne</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ order_active }}  p-2" href="#">Historia wycen</a>
+          <a class="nav-link {{ machines_active }}  p-2" href="/pricing/machine_list">Edytuj maszyne</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {{ order_active }}  p-2" href="/pricing/new_order">Wycen maszyne</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {{ order_history_active }}  p-2" href="/pricing/order_history">Historia wycen</a>
         </li>
