--- a/pricing/templates/pricing/product_list.html
+++ b/pricing/templates/pricing/product_list.html
@@ -6,61 +6,15 @@
 {% endblock %}
 
 {% block content %}
-    
-  <div class="container text-center">
-    <h1>Lista produktow</h1>
-    <div class="row">
-        <div class="table-responsive">
-            <table class="table table-striped table-sm" id="table">
-            <col width="10%">
-            <col width="50%">
-            <col width="20%">
-            <col width="20%">
-            <thead>
-                <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Zależności</th>
-                <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for product in product_list %}
-                <tr>
-                    <td>{{ product.pk }}</td>
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.price }}</td>
-                    <td>{{ product.children.all.count }}</td>
-                    <td>
-                        <a href="/pricing/product/{{ product.pk }}/edit" class="btn">
-                            <i class="fas fa-edit"></i>
-                        </a></td>
-                </tr>
-                {% endfor %}
-            </tbody>
-            </table>
-        </div>
-    </div>
-  </div>
-  <div class="pagination">
-    <span class="step-links">
-      {% if product_list.has_previous %}
-        <a href="?page=1">&laquo; first</a>
-        <a href="?page={{ product_list.previous_page_number }}">previous</a>
-      {% endif %}
-
-      <span class="current">
-        Page {{ product_list.number }} of {{ product_list.paginator.num_pages }}.
-      </span>
-
-      {% if product_list.has_next %}
-        <a href="?page={{ product_list.next_page_number }}">next</a>
-        <a href="?page={{ product_list.paginator.num_pages }}">last &raquo;</a>
-      {% endif %}
-    </span>
+  <div id="product_search" class="container">
+    <product-search :cols="cols"
+                    :buttons="buttons"
+                    :callbacks="callbacks">
+    </product-search>
   </div>
 {% endblock %}
 
 {% block js %}
+    <script src="{% static 'vue/search-component.js' %}"></script>
+    <script src="{% static 'js/product_list.js' %}"></script>
 {% endblock %}
