--- a/pricing/templates/pricing/product_list.html
+++ b/pricing/templates/pricing/product_list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="product_search" class="container">
+  <div id="product_search" class="container" style="max-width: 50rem;">
     <product-search :cols="cols"
                     :buttons="buttons"
                     :callbacks="callbacks">
