--- a/pricing/templates/pricing/navigation.html
+++ b/pricing/templates/pricing/navigation.html
@@ -1,19 +1,19 @@
       
         <li class="nav-item">
-          <a class="nav-link {{ new_product_active }} p-2" href="/pricing/new_product">Dodaj produkt</span></a>
+          <a class="nav-link {{ new_product_active }} p-2" href="/pricing/product/new">Dodaj produkt</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ products_active }}  p-2" href="/pricing/product_list">Edytuj produkt</span></a>
+          <a class="nav-link {{ products_active }}  p-2" href="/pricing/product/list">Produkty</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ new_machine_active }}  p-2" href="/pricing/new_machine">Dodaj maszyne</a>
+          <a class="nav-link {{ new_component_active }}  p-2" href="#">Dodaj komponent</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ machines_active }}  p-2" href="/pricing/machine_list">Edytuj maszyne</a>
+          <a class="nav-link {{ component_active }}  p-2" href="#">Komponenty</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ order_active }}  p-2" href="/pricing/new_order">Wycen maszyne</a>
+          <a class="nav-link {{ do_pricing_active }}  p-2" href="#">Wycena</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ order_history_active }}  p-2" href="/pricing/order_history">Historia wycen</a>
+          <a class="nav-link {{ pricing_history_active }}  p-2" href="#">Historia wycen</a>
         </li>
