--- a/pricing/templates/pricing/edit_component.html
+++ b/pricing/templates/pricing/edit_component.html
@@ -26,19 +26,25 @@
             <div style="float:left;"><p class="card-text" >Grupa</p></div>
             <div style="float:right;"><p class="card-text" >{{ form.group }}</p></div>
           </div>
-          <div class="card-body">
-              {% for f in formset %}
-                {{ f.as_table }}
-              {% endfor %}
-              {{ formset.management_form }}
+          <div class="card-body" id="element_formset">
+            <dynamic-formset ref="df"
+                                :form_prefix="prefix"
+                                :cols="cols">
+            </dynamic-formset>
           </div>
           <div class="card-body">
             <button type="submit" class="save btn btn-default">Zapisz</button>
+            <button type="button" class="save btn btn-default" data-toggle="modal" data-target="#smodal">Dodaj</button>
             {% if pk is not defined %}
             <button type="button" class="save btn btn-default" onclick="delete_component({{ pk }})">Usuń</button>
             {% endif %}
           </div>
         </form>
+        <div id="search_modal">
+            <modal :id="smodal">
+                dafd
+            </modal>
+        </div>
     </div>
 {% endblock %}
 
@@ -46,8 +52,12 @@
     <script src="{% static 'vue/search-component.js' %}"></script>
     <script src="{% static 'vue/dynamic-formset-component.js' %}"></script>
     <script src="{% static 'vue/dynamic-table-component.js' %}"></script>
+    <script src="{% static 'vue/modal-component.js' %}"></script>
     <script src="{% static 'js/edit_component.js' %}"></script>
     <script>
+      {% for f in formset %}
+        dform_set.$refs.df.add({'id': {{ f.id.value }}, 'name': 'asd', 'amount': {{ f.amount.value }} })
+      {% endfor %}
     </script>
 {% endblock %}
 
