--- a/home/templates/template.html
+++ b/home/templates/template.html
@@ -44,9 +44,24 @@
       </div>
     </div>
 
+    <div id="msg_modal">
+      <modal :id="'msg'">
+        {{ message }}
+      </modal>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'vue/modal-component.js' %}"></script>
+    <script>
+      var msg_modal = new Vue({
+        el: '#msg_modal',
+        data: {
+          showModal: true
+        }
+      })  
+    </script>
       {% block js %}
       {% endblock %}
   </body>
