--- a/pricing/templates/pricing/list_product.html
+++ b/pricing/templates/pricing/list_product.html
@@ -16,5 +16,6 @@
 
 {% block js %}
     <script src="{% static 'vue/search-component.js' %}"></script>
+    <script src="{% static 'vue/product-search-component.js' %}"></script>
     <script src="{% static 'js/list_product.js' %}"></script>
 {% endblock %}
