--- a/home/templates/template.html
+++ b/home/templates/template.html
@@ -53,6 +53,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/utils.js' %}"></script>
     <script src="{% static 'vue/modal-component.js' %}"></script>
     <script>
       var msg_modal = new Vue({
