--- a/pricing/templates/pricing/edit_project.html
+++ b/pricing/templates/pricing/edit_project.html
@@ -19,39 +19,27 @@
             <div style="float:right;"><p class="card-text" >{{ form.name }}</p></div>
           </div>
           <div class="card-body">
-            <div style="float:left;"><p class="card-text" >Nazwa projektu</p></div>
-            <div style="float:right;"><p class="card-text" >{{ form.project_name }}</p></div>
+            <div style="float:left;"><p class="card-text" >Lider</p></div>
+            <div style="float:right;"><p class="card-text" >{{ form.leader }}</p></div>
           </div>
           <div class="card-body">
-            <div style="float:left;"><p class="card-text" >Grupa</p></div>
-            <div style="float:right;"><p class="card-text" >{{ form.group }}</p></div>
+            <div style="float:left;"><p class="card-text" >Opis</p></div>
+            <div style="float:right;"><p class="card-text" >{{ form.description }}</p></div>
           </div>
-          <div class="card-body" id="element_formset">
+          <div class="card-body" id="component_formset">
             <dynamic-formset ref="df"
-                                :form_prefix="prefix"
-                                :cols="cols">
+                             :form_prefix="prefix"
+                             :cols="cols">
             </dynamic-formset>
           </div>
           <div class="card-body">
             <button type="submit" class="save btn btn-default">Zapisz</button>
-            <button type="button" class="save btn btn-default" data-toggle="modal" data-target="#product_modal">Dodaj produkt</button>
             <button type="button" class="save btn btn-default" data-toggle="modal" data-target="#component_modal">Dodaj komponent</button>
             {% if pk is not defined %}
-            <button type="button" class="save btn btn-default" onclick="delete_component({{ pk }})">Usuń</button>
+            <button type="button" class="save btn btn-default" onclick="delete_project({{ pk }})">Usuń</button>
             {% endif %}
           </div>
         </form>
-        <div id="psearch_modal">
-            <modal :id="'product_modal'">
-                <template slot="header">
-                  Dodaj produkt
-                </template>
-                <product-search :cols="cols"
-                                :buttons="buttons"
-                                :callbacks="callbacks">
-                </product-search>
-            </modal>
-        </div>
         <div id="csearch_modal">
             <modal :id="'component_modal'">
                 <template slot="header">
@@ -68,11 +56,9 @@
 
 {% block js %}
     <script src="{% static 'vue/search-component.js' %}"></script>
-    <script src="{% static 'vue/product-search-component.js' %}"></script>
     <script src="{% static 'vue/component-search-component.js' %}"></script>
     <script src="{% static 'vue/dynamic-formset-component.js' %}"></script>
-    <script src="{% static 'vue/dynamic-table-component.js' %}"></script>
-    <script src="{% static 'js/edit_component.js' %}"></script>
+    <script src="{% static 'js/edit_project.js' %}"></script>
     <script>
       {% for f in formset %}
         dform_set.$refs.df.add({'id': {{ f.id.value }}, 'name': '{{ f.name.value }}', 'amount': {{ f.amount.value }} })
