--- a/pricing/templates/pricing/navigation.html
+++ b/pricing/templates/pricing/navigation.html
@@ -17,3 +17,12 @@
           <a class="nav-link {{ components_active }}  p-2" href="/pricing/component/list">Komponenty</a>
         </li>
       </ul>
+
+      <ul class="navbar-nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link {{ new_project_active }}  p-2" href="/pricing/project/new">Dodaj projekt</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {{ projects_active }}  p-2" href="/pricing/project/list">Projekty</a>
+        </li>
+      </ul>
