--- a/pricing/templates/pricing/navigation.html
+++ b/pricing/templates/pricing/navigation.html
@@ -2,10 +2,10 @@
         
       <ul class="navbar-nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link {{ new_product_active }} p-2" href="/pricing/product/new">Dodaj produkt</span></a>
+          <a class="nav-link {{ new_product_active }} p-2" href="/pricing/product/new">Dodaj produkt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ products_active }}  p-2" href="/pricing/product/list">Produkty</span></a>
+          <a class="nav-link {{ products_active }}  p-2" href="/pricing/product/list">Produkty</a>
         </li>
       </ul>
 
