--- a/pricing/templates/pricing/edit_component.html
+++ b/pricing/templates/pricing/edit_component.html
@@ -37,6 +37,7 @@
             <button type="button" class="save btn btn-default" data-toggle="modal" data-target="#product_modal">Dodaj produkt</button>
             <button type="button" class="save btn btn-default" data-toggle="modal" data-target="#component_modal">Dodaj komponent</button>
             {% if pk is not defined %}
+            <button type="button" class="save btn btn-default" onclick="location.href='/pricing/component/{{pk}}'">Szczegóły</button>
             <button type="button" class="save btn btn-default" onclick="delete_component({{ pk }})">Usuń</button>
             {% endif %}
           </div>
