--- a/pricing/templates/pricing/edit_product.html
+++ b/pricing/templates/pricing/edit_product.html
@@ -19,6 +19,10 @@
             <div style="float:right;"><p class="card-text" >{{ form.name }}</p></div>
           </div>
           <div class="card-body">
+            <div style="float:left;"><p class="card-text" >Marka</p></div>
+            <div style="float:right;"><p class="card-text" >{{ form.brand }}</p></div>
+          </div>
+          <div class="card-body">
             <div style="float:left;"><p class="card-text" >Cena</p></div>
             <div style="float:right;"><p class="card-text" >{{ form.price }}</p></div>
           </div>
