--- a/pricing/templates/pricing/edit_project.html
+++ b/pricing/templates/pricing/edit_project.html
@@ -59,6 +59,7 @@
     <script src="{% static 'vue/search-component.js' %}"></script>
     <script src="{% static 'vue/component-search-component.js' %}"></script>
     <script src="{% static 'vue/dynamic-formset-component.js' %}"></script>
+    <script src="{% static 'js/pricing_utils.js' %}"></script>
     <script src="{% static 'js/edit_project.js' %}"></script>
     <script>
       {% for f in formset %}
