--- a/pricing/templates/pricing/edit_product.html
+++ b/pricing/templates/pricing/edit_product.html
@@ -51,6 +51,7 @@
 {% block js %}
     <script src="{% static 'vue/search-component.js' %}"></script>
     <script src="{% static 'vue/dynamic-formset-component.js' %}"></script>
+    <script src="{% static 'js/pricing_utils.js' %}"></script>
     <script src="{% static 'js/edit_product.js' %}"></script>
 {% endblock %}
 
