--- a/pricing/templates/pricing/details_component.html
+++ b/pricing/templates/pricing/details_component.html
@@ -18,8 +18,7 @@
             <div style="float:right;"><p class="card-text" >{{ project_name }}</p></div>
           </div>
           <div class="card-body" id="details_component">
-            <grouped-table
-                           :rows="rows"
+            <grouped-table :rows="rows"
                            :cols="cols">
             </grouped-table>
           </div>
