Webpack + vue + django

--- a/pricing/templates/pricing/details_component.html
+++ b/pricing/templates/pricing/details_component.html
@@ -3,7 +3,7 @@
     {% load staticfiles %}
 
 {% block navigation %}
-{% include "pricing/navigation.html" %}
+{% include "pricing_navigation.html" %}
 {% endblock %}
 
 {% block content %}
